objects/Sales_Order_Type__c/Sales_Order_Type__c.object-meta.xml
<CustomObject>
    <label>Sales Order Type</label>
    <nameField>
        <label>No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>