objects/Sales_Order_Type__c/fields/D365_Account_Revenue__c.field-meta.xml
<CustomField>
    <fullName>D365_Account_Revenue__c</fullName>
    <description>This field is being created to track the d365 account revenue for accruals.</description>
    <label>D365 Account Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>63040</fullName>
            </value>
            <value>
                <fullName>63050</fullName>
            </value>
            <value>
                <fullName>63010</fullName>
            </value>
            <value>
                <fullName>63080</fullName>
            </value>
            <value>
                <fullName>63110</fullName>
            </value>
            <value>
                <fullName>63140</fullName>
            </value>
            <value>
                <fullName>63130</fullName>
            </value>
            <value>
                <fullName>63030</fullName>
            </value>
            <value>
                <fullName>63060</fullName>
            </value>
            <value>
                <fullName>63150</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>