objects/Sales_Order_Type__c/fields/D365_LOB__c.field-meta.xml
<CustomField>
    <fullName>D365_LOB__c</fullName>
    <description>This field D365 LOB is to track for accruals.</description>
    <label>D365 LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4000</fullName>
            </value>
            <value>
                <fullName>3020</fullName>
            </value>
            <value>
                <fullName>4010</fullName>
            </value>
            <value>
                <fullName>3060</fullName>
            </value>
            <value>
                <fullName>3040</fullName>
            </value>
            <value>
                <fullName>5000</fullName>
            </value>
            <value>
                <fullName>3030</fullName>
            </value>
            <value>
                <fullName>3010</fullName>
            </value>
            <value>
                <fullName>5010</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>