objects/Sales_Order_Type__c/fields/Emergency_Response__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Response</label>
    <type>Checkbox</type>
</CustomField>