objects/Sales_Order_Type__c/fields/EQAI_Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Work_Order_Type__c</fullName>
    <label>EQAI Work Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Lab Packs</fullName>
            </value>
            <value>
                <fullName>Emergency Response</fullName>
            </value>
            <value>
                <fullName>Marine Services</fullName>
            </value>
            <value>
                <fullName>Remediation Project Management</fullName>
            </value>
            <value>
                <fullName>Self Waste Transportation and Disposal</fullName>
            </value>
            <value>
                <fullName>Other Services</fullName>
            </value>
            <value>
                <fullName>HHW Services</fullName>
            </value>
            <value>
                <fullName>LTL</fullName>
            </value>
            <value>
                <fullName>Brokered Trans/3rd Party Disposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>