objects/Sales_Order_Type__c/fields/Job_Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Job_Task_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wizard Template</label>
    <referenceTo>Job_Task_Template__c</referenceTo>
    <relationshipLabel>Sales Order Types</relationshipLabel>
    <relationshipName>Sales_Order_Types</relationshipName>
    <type>Lookup</type>
</CustomField>