objects/Sales_Order_Type__c/fields/Rate_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Rate_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Sheet</label>
    <referenceTo>Rate_Sheet__c</referenceTo>
    <relationshipLabel>Sales Order Types</relationshipLabel>
    <relationshipName>Sales_Order_Types</relationshipName>
    <type>Lookup</type>
</CustomField>