objects/Sales_Order_Type__c/fields/Single_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Single_Sales_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Control sales order creation, only allows one sales order per new customer (customer with no account number).</inlineHelpText>
    <label>One Sales Order (New Customer)</label>
    <type>Checkbox</type>
</CustomField>