objects/Sales_Order_Type__c/fields/Work_Order_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type_ID__c</fullName>
    <description>This field is created to map Salesforce Sales Order Types to EQAI Work Order Types</description>
    <label>Work Order Type ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>