objects/Sales_Order_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Job_Task_Template__c</columns>
    <columns>Code__c</columns>
    <columns>Blocked__c</columns>
    <columns>Emergency_Response__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>Single_Sales_Order__c</columns>
    <columns>Rate_Sheet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>